--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
   <meta charset="UTF-8">
   <title>Superhero Phone Book</title>
   <link rel="stylesheet" href="style.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
+  <script src="app.js"></script>
 </head>
 <body ng-controller='heroesCtrl as vm'>
 
-  <script src="app.js"></script>
+
 </body>
 </html>
