--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <div ng-repeat='hero in vm.heroes'>
   <p>{{$index +1}}. {{hero.name}}</p>
   <p>{{hero.phone_number}}</p>
-  <p>{{hero.comics}}</p>
+  <p ng-class="{'blue':hero.comics === 'Marvel','red':hero.comics === 'DC'}">{{hero.comics}}</p>
   <p><img ng-src="{{hero.img_url}}"></p>
 </div>
 
@@ -30,7 +30,6 @@
     <td><img ng-src="{{hero.img_url}}"></td>
   </tr>
 </table>
-
 </div>
 </body>
 </html>
